answers on mobile fixed

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -100,7 +100,7 @@ main {
 @media (max-width: 992px) {
     main {
         .answer {
-            width: 80%;
+            max-width: 100% !important;
             padding: 15px;
             font-weight: 500;
         }
